fix: prevent labels from overlapping

--- a/src/app/nav-bar/nav-bar.component.scss
+++ b/src/app/nav-bar/nav-bar.component.scss
@@ -1,9 +1,10 @@
 .nav-bar-timeline-label {
-  margin-right:20px;
+  margin-right: 20px;
 }
 
 .nav-bar-job-label {
-  margin-left:20px;
+  margin-left: 20px;
+  min-width: 170px;
 }
 
 span.avoid-wrap {
